--- a/src/app/home/global-schemas/global-schemas.component.html
+++ b/src/app/home/global-schemas/global-schemas.component.html
@@ -10,8 +10,7 @@
     <div class="pb-4 pt-2">
         <odp-basic-info hideLogo="true" [(name)]="name" [(description)]="description" [edit]="edit">
             <div class="d-flex justify-content-end align-items-center">
-                <button (click)="cancel()" type="button"
-                    class="edit-button btn btn-min-width btn-light border mr-3"
+                <button (click)="cancel()" type="button" class="edit-button btn btn-min-width btn-white border mr-3"
                     id="sbButtonCancel">
                     <span class="text">Cancel</span>
                 </button>
@@ -40,52 +39,47 @@
         </div>
         
     </div> -->
-    <div class="d-flex flex-column w-100">
-        <div class="d-flex flex-column w-100 border rounded-lg">
-            <div class="d-flex w-100 builder">
-                <div class="d-flex flex-column w-100 builder-body">
-                    <div class="options d-flex justify-content-between align-items-center border-bottom px-3">
-                        <span class="text-dark font-weight-bold">Attributes</span>
-                        <div class="d-flex justify-content-end align-items-center" *ngIf="edit.status">
-                            <button type="button" class="btn btn-link pr-0" (click)="addField('after')"
-                                id="sbInsertAttribute">
-                                Insert
-                            </button>
-                            <div ngbDropdown class="d-inline-block mr-3">
-                                <button type="button" class="btn btn-link px-1 pt-2" id="insertDropDown"
-                                    ngbDropdownToggle></button>
-                                <div ngbDropdownMenu>
-                                    <button type="button" class="dropdown-item" (click)="addField('before')">Insert
-                                        Before</button>
-                                    <button type="button" class="dropdown-item" (click)="addField('after')">Insert
-                                        After</button>
-                                </div>
-                            </div>
-                            <button type="button" class="btn btn-link" (click)="clearSchema()" id="sbClearAll">
-                                Delete All
-                            </button>
+    <div class="d-flex w-100 builder">
+        <div class="d-flex flex-column w-100 builder-body bg-white border rounded-lg">
+            <div class="options d-flex justify-content-between align-items-center border-bottom px-3">
+                <span class="text-dark font-weight-bold">Attributes</span>
+                <div class="d-flex justify-content-end align-items-center" *ngIf="edit.status">
+                    <button type="button" class="btn btn-link pr-0" (click)="addField('after')" id="sbInsertAttribute">
+                        Insert
+                    </button>
+                    <div ngbDropdown class="d-inline-block mr-3">
+                        <button type="button" class="btn btn-link px-1 pt-2" id="insertDropDown"
+                            ngbDropdownToggle></button>
+                        <div ngbDropdownMenu>
+                            <button type="button" class="dropdown-item" (click)="addField('before')">Insert
+                                Before</button>
+                            <button type="button" class="dropdown-item" (click)="addField('after')">Insert
+                                After</button>
                         </div>
                     </div>
-                    <div class="schema-creator scroll position-relative" id="schema-creator">
-                        <ng-container formArrayName="definition">
-                            <ng-container *ngFor="let def of definitions;let i = index;let first = first;">
-                                <odp-structure-field [formGroupName]="i" [all]="form.get('definition')" [index]="i"
-                                    [first]="first" [edit]="edit" [isLibrary]="true"></odp-structure-field>
-                            </ng-container>
-                            <div class="add-attribute d-flex align-items-center text-muted" *ngIf="edit.status">
-                                <span class="d-flex align-items-center hover" (click)="addField()"
-                                    id="schemaFieldObjectAddField">
-                                    <span class="dsi dsi-plus fa-xs mr-1"></span>
-                                    <span class="text">New Attribute</span>
-                                </span>
-                            </div>
-                        </ng-container>
-                    </div>
-                </div>
-                <div class="properties-wrapper builder-body">
-                    <odp-structure-field-properties [edit]="edit" [isLibrary]="true"></odp-structure-field-properties>
+                    <button type="button" class="btn btn-link" (click)="clearSchema()" id="sbClearAll">
+                        Delete All
+                    </button>
                 </div>
             </div>
+            <div class="schema-creator scroll position-relative p-4" id="schema-creator">
+                <ng-container formArrayName="definition">
+                    <ng-container *ngFor="let def of definitions;let i = index;let first = first;">
+                        <odp-structure-field [formGroupName]="i" [all]="form.get('definition')" [index]="i"
+                            [first]="first" [edit]="edit" [isLibrary]="true"></odp-structure-field>
+                    </ng-container>
+                    <div class="add-attribute d-flex align-items-center mt-4" *ngIf="edit.status">
+                        <span class="d-flex align-items-center justify-content-center hover alert alert-primary w-100"
+                            (click)="addField()" id="schemaFieldObjectAddField">
+                            <span class="dsi dsi-plus fa-xs mr-2"></span>
+                            <span class="text">Add Attribute</span>
+                        </span>
+                    </div>
+                </ng-container>
+            </div>
+        </div>
+        <div class="properties-wrapper builder-body">
+            <odp-structure-field-properties [edit]="edit" [isLibrary]="true"></odp-structure-field-properties>
         </div>
     </div>
 </div>
