--- a/src/app/utils/field-type/field-type-selector/field-type-selector.component.scss
+++ b/src/app/utils/field-type/field-type-selector/field-type-selector.component.scss
@@ -30,8 +30,12 @@
     text-decoration: none;
   }
 
-  .type-width:hover {
-    background: $light;
-    border-radius: 4px;
+  .type-width,
+  .background-hover {
+    &:hover {
+      background: $light;
+      border-radius: 4px;
+    }
   }
+
 }
