--- a/src/app/utils/structure-field-properties/text-property/text-property.component.html
+++ b/src/app/utils/structure-field-properties/text-property/text-property.component.html
@@ -3,8 +3,7 @@
   <div class="d-flex w-100  flex-column mb-4" *ngIf="form.get('properties.default') && !form.get('properties.longText')?.value &&
     !form.get('properties.richText')?.value && !isLibrary && !isDataFormat">
     <div>
-      <div class=" text-secondary">Default Value
-      </div>
+      <div class="font-14 text-dark mb-2">Default Value</div>
       <div class=" position-relative">
         <ng-container *ngIf="canEdit">
           <input *ngIf="isPlainString(form.get('properties'))" class="form-control" type="text"
@@ -33,60 +32,31 @@
     <div>
       <div></div>
       <div class="ml-2">
-        <span class="text-danger" *ngIf="form.get('properties.default').hasError('minlength')"><span
-            class="dsi dsi-close mr-1"></span>{{form.get('properties.name').value}}
-          should have min. length {{form.get('properties.minlength').value}}
-        </span>
-        <span class="text-danger" *ngIf="form.get('properties.default').hasError('maxlength')"><span
-            class="dsi dsi-close mr-1"></span>
-          {{form.get('properties.name').value}} should have max. length {{form.get('properties.maxlength').value}}
-        </span>
-        <span class="text-danger" *ngIf="form.get('properties.default').hasError('pattern')"><span
-            class="dsi dsi-close mr-1"></span>
-          Invalid regex pattern</span>
-        <span class="text-danger" *ngIf="form.get('properties.default').hasError('DefaultEmail')"><span
-            class="dsi dsi-close mr-1"></span>
-          {{form.get('properties.name').value}} should be a valid email</span>
+        <div class="text-danger mt-1" *ngIf="form.get('properties.default').hasError('minlength')">
+          <span class="dsi dsi-danger-circle mr-2"></span>
+          <span>{{form.get('properties.name').value}} should have min. length
+            {{form.get('properties.minlength').value}}</span>
+        </div>
+        <div class="text-danger mt-1" *ngIf="form.get('properties.default').hasError('maxlength')">
+          <span class="dsi dsi-danger-circle mr-2"></span>
+          <span>{{form.get('properties.name').value}} should have max. length
+            {{form.get('properties.maxlength').value}}</span>
+        </div>
+        <div class="text-danger mt-1" *ngIf="form.get('properties.default').hasError('pattern')">
+          <span class="dsi dsi-danger-circle mr-2"></span>
+          <span>Invalid regex pattern</span>
+        </div>
+        <div class="text-danger mt-1" *ngIf="form.get('properties.default').hasError('DefaultEmail')">
+          <span class="dsi dsi-danger-circle mr-2"></span>
+          <span>{{form.get('properties.name').value}} should be a valid email</span>
+        </div>
       </div>
     </div>
-  </div>
-  <div *ngIf=" showSecureText()" class="w-100 mt-4" [ngClass]="{'mb-4': collectionSecureText()}">
-    <div class="font-14 text-dark mb-2">Secure</div>
-    <!-- <div >
-      <select [attr.disabled]="!canEdit ? '' : null" class="form-control" formControlName="password">
-        <option [ngValue]="true">True</option>
-        <option [ngValue]="false">False</option>
-      </select> -->
-    <div class=" position-relative">
-      <ng-container *ngIf="canEdit">
-        <label *ngIf="canEdit" class="switch accent">
-          <input type="checkbox" formControlName="password">
-          <span class="slider"></span>
-          <span class="toggler"></span>
-          <span class="ml-3">{{form.get('properties.password')?.value ? 'Yes' : 'No'}}</span>
-        </label>
-      </ng-container>
-      <ng-container *ngIf="!canEdit">
-        <span class="text d-flex" *ngIf=" form.get('properties.password').value === true">
-          <span class="d-flex align-items-center justify-content-center rounded-circle bg-accent check-circle mr-1">
-            <span class="fa fa-check text-white"></span>
-          </span>
-          <span class="text">Yes</span>
-        </span>
-        <span class="text d-flex" *ngIf="form.get('properties.password').value === false">
-          <span class="d-flex align-items-center justify-content-center rounded-circle bg-secondary check-circle mr-1">
-          </span>
-          <span class="text">No</span>
-        </span>
-      </ng-container>
-    </div>
-
-    <!-- </div> -->
   </div>
   <div class="d-flex flex-column w-100 mt-4" *ngIf="form.get('properties.pattern') && (form.get('properties._detailedType').value ==='' ||
           form.get('properties._detailedType').value === 'password')">
     <div class="position-relative ">
-      <div class=" text-secondary">Pattern</div>
+      <div class="font-14 text-dark mb-2">Pattern</div>
       <div>
         <input *ngIf="canEdit" class="form-control" type="text" formControlName="pattern" id="_pattern"
           placeholder="Regular Expression"
@@ -152,22 +122,23 @@
             <input *ngIf="editStateListOfValues === i" type="text" [formControl]="en" class="field form-control"
               [id]="en.value" (keyup.enter)="editStateListOfValues = null" odpAutoFocus>
           </div>
-          <span *ngIf="edit.status" class="enum-icons-section text-danger">
-            <span class="dsi dsi-trash" (click)="removeFromList('enum',i)" placement="top" [ngbTooltip]="'Remove'"></span>
+          <span *ngIf="edit.status" class="enum-icons-section">
+            <span class="dsi dsi-trash" (click)="removeFromList('enum',i)" placement="top"
+              [ngbTooltip]="'Remove'"></span>
           </span>
         </div>
 
       </ng-container>
     </div>
-    <button type="button" class="btn btn-primary my-1 w-100" *ngIf="enumList.length>2 && edit.status"
-      (click)="clearList('enum')">Clear
-      All
+    <button type="button" class="btn btn-white my-1 w-100" *ngIf="enumList.length>2 && edit.status"
+      (click)="clearList('enum')">
+      Clear All
     </button>
   </div>
 
   <div class="w-100 mb-4 mt-4" *ngIf="form.get('properties.hasTokens') && (form.get('properties.longText').value
                   || form.get('properties.richText').value)">
-    <div class=" text-secondary">Tokens</div>
+    <div class="font-14 text-dark mb-2">Tokens</div>
     <div class=" position-relative" *ngIf="canEdit; else show_list">
       <input class="form-control" *ngIf="form.get('properties._type').value == 'String'"
         (paste)="pasteOnList($event,'hasTokens','string')" type="text" formControlName="_listInput"
@@ -202,7 +173,7 @@
       <div class="row no-gutters">
         <div class="col-6">
           <ng-container *ngIf="form.get('properties.minlength') && form.get('properties._detailedType').value==''">
-            <div class="mb-2">Min Length</div>
+            <div class="font-14 text-dark mb-2">Min Length</div>
             <input *ngIf="canEdit" class=" form-control short" placeholder="Minimum length"
               [ngClass]="{'is-invalid':form.get('properties.minlength').dirty && form.hasError('minMaxLength')}"
               type="text" min="0" #minlengthEle formControlName="minlength" id="_minLength"
@@ -214,7 +185,7 @@
         </div>
         <div class="col-6">
           <ng-container *ngIf="form.get('properties.maxlength') && form.get('properties._detailedType').value==''">
-            <div class="mb-2">Max Length</div>
+            <div class="font-14 text-dark mb-2">Max Length</div>
             <input *ngIf="canEdit" class=" form-control short mb-2" placeholder="Maximum length"
               [ngClass]="{'is-invalid':form.get('properties.maxlength').dirty && form.hasError('minMaxLength')}"
               type="text" min="0" #maxlengthEle formControlName="maxlength" id="_maxLength"
@@ -229,58 +200,18 @@
           <div class="font-12 text-secondary mb-2"
             *ngIf="form.get('properties.minlength') && form.get('properties.maxlength') && form.get('properties._detailedType').value==''">
             Min and max length of the attribute</div>
-          <div class="font-12 text-danger"
-            *ngIf="form.get('properties.minlength').dirty && form.get('properties').hasError('minMaxLength')"><span
-              class="dsi dsi-close mr-1"></span>Min
-            Length value cannot be greater then Max Length value</div>
+          <div class="font-12 text-danger mt-1 d-flex align-items-center"
+            *ngIf="form.get('properties.minlength').dirty && form.get('properties').hasError('minMaxLength')">
+            <span class="dsi dsi-danger-circle mr-2"></span>
+            <span>Min Length value cannot be greater then Max Length value</span>
+          </div>
         </div>
-        <div class="font-12 text-danger"
-          *ngIf="form.get('properties.maxlength').dirty && form.get('properties').hasError('minMaxLength')"><span
-            class="dsi dsi-close mr-1"></span>Max
-          Length value cannot be lesser then Min Length value</div>
+        <div class="font-12 text-danger mt-1 d-flex align-items-center"
+          *ngIf="form.get('properties.maxlength').dirty && form.get('properties').hasError('minMaxLength')">
+          <span class="dsi dsi-danger-circle mr-2"></span>
+          <span>Max Length value cannot be lesser then Min Length value</span>
+        </div>
       </div>
-
-      <!-- <div >
-        <div class="d-flex position-relative">
-          <div class="d-flex">
-            <div class="sub-level-width text-secondary">Min.</div>
-            <input *ngIf="canEdit" class=" form-control short" placeholder="Minimum length"
-              [ngClass]="{'is-invalid':form.get('properties.minlength').dirty && form.hasError('minMaxLength')}"
-              type="text" min="0" #minlengthEle formControlName="minlength" id="_minLength"
-              (blur)="reCalibrateTextDefaultValue('minlength', form.get('properties.minlength').value, form.get('properties'))">
-            <span
-              *ngIf="!canEdit && form.get('properties.minlength') && form.get('properties.minlength').value">{{form.get('properties.minlength').value}}</span>
-            <span class="text-muted" *ngIf="!canEdit && !form.get('properties.minlength').value">-</span>
-          </div>
-          <div class="d-flex ml-2">
-            <div class="sub-level-width"></div>
-            <span class=" text-danger"
-              *ngIf="form.get('properties.minlength').dirty && form.get('properties').hasError('minMaxLength')"><span
-                class="dsi dsi-close mr-1"></span>Min
-              Length value cannot be greater then Max Length value</span>
-          </div>
-        </div>
-        <div class="d-flex w-10 ml-2 pl-2 d-flex flex-column position-relative"
-          *ngIf="form.get('properties.maxlength') && form.get('properties._detailedType').value==''">
-          <div class="d-flex">
-            <div class="sub-level-width text-secondary">Max.</div>
-            <input *ngIf="canEdit" class=" form-control short mb-2" placeholder="Maximum length"
-              [ngClass]="{'is-invalid':form.get('properties.maxlength').dirty && form.hasError('minMaxLength')}"
-              type="text" min="0" #maxlengthEle formControlName="maxlength" id="_maxLength"
-              (blur)="reCalibrateTextDefaultValue('maxlength', form.get('properties.maxlength').value, form.get('properties'))">
-            <span
-              *ngIf="!canEdit && form.get('properties.maxlength') && form.get('properties.maxlength').value">{{form.get('properties.maxlength').value}}</span>
-            <span class="text-muted" *ngIf="!canEdit && !form.get('properties.maxlength').value">-</span>
-          </div>
-          <div class="d-flex ml-2">
-            <div class="sub-level-width"></div>
-            <span class=" text-danger"
-              *ngIf="form.get('properties.maxlength').dirty && form.get('properties').hasError('minMaxLength')"><span
-                class="dsi dsi-close mr-1"></span>Max
-              Length value cannot be lesser then Min Length value</span>
-          </div>
-        </div>
-      </div> -->
     </div>
   </ng-container>
 </div>
