--- a/src/app/home/faas/faas-listing/faas-listing.component.html
+++ b/src/app/home/faas/faas-listing/faas-listing.component.html
@@ -6,7 +6,8 @@
     </div>
     <div class="d-flex align-items-center">
       <odp-search-box (enteredText)="search($event)" (reset)="resetSearch();"></odp-search-box>
-      <button id="createFunction" type="button" class="add-new btn btn-primary btn-min-width ml-3 d-flex align-items-center" (click)="newFaas()"
+      <button id="createFunction" type="button"
+        class="add-new btn btn-primary btn-min-width ml-3 d-flex align-items-center" (click)="newFaas()"
         [disabled]="!hasWritePermission('FAAS')">
         <span class="dsi dsi-plus mr-2"></span>
         <span class="text">New Function</span>
@@ -23,16 +24,18 @@
     </div>
     <div *ngIf="records.length>0" class="list-group mb-3">
       <div
-        class="list-group-item header d-flex align-items-center justify-content-between py-0 bg-light text-uppercase font-11 fw-500">
+        class="list-group-item header d-flex align-items-center justify-content-start py-0 bg-light text-uppercase font-11 fw-500">
         <div class="item-name">Name</div>
         <div class="d-flex align-items-center">
           <div class="item-url">URL</div>
           <div class="item-status">Status</div>
           <div class="item-last-invoked">Last Invoked</div>
         </div>
-        <div class="item-actions"></div>
+        <div class="d-flex w-100 justify-content-end position-relative">
+          <div class="item-actions"></div>
+        </div>
       </div>
-      <div class="list-group-item d-flex align-items-center justify-content-between"
+      <div class="list-group-item d-flex align-items-center justify-content-start"
         *ngFor="let item of records;let i=index">
         <div class="item-name fw-500">
           <span class="ml-2 pl-1 text-dark">{{item.name}}</span>
@@ -43,7 +46,7 @@
           <div class="sub-heading item-url pr-3 d-flex align-items-center">
             <span *ngIf="copied[item._id]" class="text-accent mr-2">Copied!</span>
             <span *ngIf="!copied[item._id]" class="dsi dsi-copy text-accent mr-2 hover" (click)="copyUrl(item)"></span>
-            <span class="text-truncate" [ngbTooltip]="item.url">{{item.url}}</span>
+            <span class="text-truncate" [ngbTooltip]="item.url" container="body">{{item.url}}</span>
           </div>
           <div class="sub-heading item-status d-flex align-items-center">
             <span class="fa fa-circle mr-2" [ngClass]="getStatusClass(item)"></span>
@@ -54,28 +57,31 @@
             <span *ngIf="!item.lastInvoked" class="text-muted">-</span>
           </div>
         </div>
-        <div class="item-actions">
-          <div class="actions d-flex justify-content-end hover align-items-center">
-            <ng-container *ngIf="item.status != 'Pending' && item.status != 'Maintainance' ">
-              <span *ngIf="canDeployFunction(item)" id='deploy_{{i}}' class="dsi dsi-skip-forward text-primary mr-2"
-                (click)="deployFunction(i)" [ngbTooltip]="'Deploy v'+(item.draftVersion || item.version)"
-                container="body"></span>
-              <span class="dsi dsi-play hover mr-2" *ngIf="item.status == 'STOPPED' && canStartStopFunction(i)"
-                (click)="toggleFunctionStatus(i)" [ngbTooltip]="'Start v'+(item.version || 1)" container="body"></span>
-              <span class="dsi dsi-stop hover mr-2" *ngIf="item.status == 'Active' && canStartStopFunction(i)"
-                (click)="toggleFunctionStatus(i)" [ngbTooltip]="'Stop v'+(item.version || 1)" container="body"></span>
-              <span class="dsi dsi-edit hover mr-2" *ngIf="canManageFaas(item._id)" (click)="editFunction(i)"></span>
-              <span class="dsi dsi-view hover mr-2" *ngIf="canManageFaas(item._id)" (click)="viewFunction(i)"></span>
-            </ng-container>
-            <span class="dsi dsi-copy hover mr-2" *ngIf="canManageFaas(item._id)" (click)="cloneFunction(i)"></span>
-            <span class="dsi dsi-trash hover mr-2" *ngIf="canManageFaas(item._id)" (click)="deleteFunction(i)"></span>
+        <div class="d-flex w-100 justify-content-end position-relative">
+          <div class="item-actions h-10">
+            <div class="actions d-flex justify-content-end hover align-items-center">
+              <ng-container *ngIf="item.status != 'Pending' && item.status != 'Maintainance' ">
+                <span *ngIf="canDeployFunction(item)" id='deploy_{{i}}' class="dsi dsi-skip-forward text-primary mr-2"
+                  (click)="deployFunction(i)" [ngbTooltip]="'Deploy v'+(item.draftVersion || item.version)"
+                  container="body"></span>
+                <span class="dsi dsi-play hover mr-2" *ngIf="item.status == 'STOPPED' && canStartStopFunction(i)"
+                  (click)="toggleFunctionStatus(i)" [ngbTooltip]="'Start v'+(item.version || 1)"
+                  container="body"></span>
+                <span class="dsi dsi-stop hover mr-2" *ngIf="item.status == 'Active' && canStartStopFunction(i)"
+                  (click)="toggleFunctionStatus(i)" [ngbTooltip]="'Stop v'+(item.version || 1)" container="body"></span>
+                <span class="dsi dsi-edit hover mr-2" *ngIf="canManageFaas(item._id)" (click)="editFunction(i)"></span>
+                <span class="dsi dsi-view hover mr-2" *ngIf="canManageFaas(item._id)" (click)="viewFunction(i)"></span>
+              </ng-container>
+              <span class="dsi dsi-copy hover mr-2" *ngIf="canManageFaas(item._id)" (click)="cloneFunction(i)"></span>
+              <span class="dsi dsi-trash hover mr-2" *ngIf="canManageFaas(item._id)" (click)="deleteFunction(i)"></span>
 
-            <!-- <ng-container *ngIf="canManageFaas(item._id) && easterEggEnabled">
-              <span class="text-muted mr-2">|</span>
-              <span id="getYamls" class="hover text-accent mr-2 font-11" (click)="getYamls(i)">YAMLs</span>
-              <span [ngbTooltip]="'Repair v'+item.version" id="repairDataService"
-                class="fa fa-toolbox text-accent mr-2 hover" (click)="repairService(i)"></span>
-            </ng-container> -->
+              <!-- <ng-container *ngIf="canManageFaas(item._id) && easterEggEnabled">
+                <span class="text-muted mr-2">|</span>
+                <span id="getYamls" class="hover text-accent mr-2 font-11" (click)="getYamls(i)">YAMLs</span>
+                <span [ngbTooltip]="'Repair v'+item.version" id="repairDataService"
+                  class="fa fa-toolbox text-accent mr-2 hover" (click)="repairService(i)"></span>
+              </ng-container> -->
+            </div>
           </div>
         </div>
       </div>
