--- a/src/app/home/app-manage/app-manage.component.html
+++ b/src/app/home/app-manage/app-manage.component.html
@@ -28,10 +28,10 @@
         (click)="activeTab = 1">
         <span class="text">Theme</span>
       </div>
-      <div class="tab d-flex align-items-center px-3 hover" [ngClass]="{ active: activeTab == 2 }"
+      <!-- <div class="tab d-flex align-items-center px-3 hover" [ngClass]="{ active: activeTab == 2 }"
         (click)="activeTab = 2">
         <span class="text">Identity</span>
-      </div>
+      </div> -->
       <!-- <div class="tab d-flex align-items-center px-3 hover" [ngClass]="{'active':activeTab == 3}"
                     (click)="changeTab()">
                     <span class="text">Management</span>
