--- a/src/app/home/local-bot/local-bot.component.scss
+++ b/src/app/home/local-bot/local-bot.component.scss
@@ -371,6 +371,7 @@
   text-decoration: underline;
   text-underline-offset: 10px;
   text-decoration-color: $orange;
+  text-decoration-thickness: 2px;
   color: $headings;
 }
 
