--- a/src/app/home/local-bot/manage-bot-key/manage-bot-key.component.html
+++ b/src/app/home/local-bot/manage-bot-key/manage-bot-key.component.html
@@ -11,7 +11,8 @@
 
 <div class="d-flex mb-4">
     <div>
-        <odp-search-box (enteredText)="enterToSelect($event)" (reset)="enterToSelect(null)" [selectOnEnter]="true">
+        <odp-search-box (enteredText)="enterToSelect($event)" (reset)="enterToSelect(null)" [selectOnEnter]="true"
+            [open]="true">
         </odp-search-box>
     </div>
     <div class="d-flex ml-auto mr-2">
@@ -31,31 +32,32 @@
         <div class="list-group mb-3">
             <div class="list-group-item header py-0 bg-light text-muted text-uppercase font-11">
                 <div class="d-flex align-items-center justify-content-between h-100">
-                    <div class="d-flex-1">Key Name</div>
-                    <div class="d-flex-1">Expires (In Days)</div>
-                    <div class="d-flex-1">Key</div>
-                    <div class="d-flex-1">Last Login At</div>
-                    <div class="group-actions"></div>
+                    <div class="" style="flex-basis: 25%;">Key Name</div>
+                    <div class="" style="flex-basis: 15%;">Expires (In Days)</div>
+                    <div class="" style="flex-basis: 35%;">Key</div>
+                    <div class="" style="flex-basis: 15%;">Last Login At</div>
+                    <div class="group-actions" style="flex-basis: 15%;"></div>
                 </div>
             </div>
             <div class="list-group-item" *ngFor="let key of data">
                 <div class="d-flex align-items-center justify-content-between">
-                    <div class="d-flex-1">{{key.label}}</div>
-                    <div class="d-flex-1">
+                    <div class="truncate" style="flex-basis: 25%;">{{key.label}}</div>
+                    <div class="" style="flex-basis: 15%;">
                         <span *ngIf="!key.isActive" style="color: #FF9052">Deactivated</span>
                         <span *ngIf="key.isActive">{{key.expires/ (24 * 60)}}</span>
                     </div>
-                    <div [ngStyle]="{flex: key.isNew ? '2' : '1' }">
+                    <div [ngStyle]="" style="flex-basis: 35%;">
                         <span *ngIf="!key.isNew">****************</span>
                         <span *ngIf="key.isNew" (click)="copyKey(key)">
                             <span>{{ key.keyValue }}</span>
                             <span class="dsi dsi-copy ml-2 hover"></span>
                         </span>
                     </div>
-                    <div class="d-flex-1">{{key.lastLogin ? formatLastLogin(key.lastLogin) : '-'}}
+                    <div class="" style="flex-basis: 15%;">{{key.lastLogin ? formatLastLogin(key.lastLogin) :
+                        '-'}}
                     </div>
 
-                    <div class="group-actions">
+                    <div class="group-actions" style="flex-basis: 15%;">
                         <button type="button" class="btn btn-link text-muted p-1" (click)="confirmEndSession(key)"
                             *ngIf="hasPermission('PMBA')">
                             <span class="dsi dsi-ban"></span>
