--- a/src/app/home/control-panel/user/user-to-group-modal/user-to-group-modal.component.html
+++ b/src/app/home/control-panel/user/user-to-group-modal/user-to-group-modal.component.html
@@ -1,4 +1,4 @@
-<div style="padding: 20px">
+<div>
   <div class="d-flex align-items-center">
     <div class="title">Add user to the group</div>
     <i class="fa fa-times ml-auto" style="cursor: pointer" (click)="closeDialog()"></i>
