--- a/src/app/home/control-panel/user/user.component.html
+++ b/src/app/home/control-panel/user/user.component.html
@@ -29,7 +29,8 @@
         </button>
         <button *ngIf="hasPermission('PMUBC')" type="button" id="newUser" class="add-new btn btn-primary"
           (click)="newUser()">
-          <span class="dsi dsi-plus"></span>
+          <span class="dsi dsi-plus mr-2"></span>
+          <span>New User</span>
         </button>
       </div>
     </div>
@@ -47,23 +48,30 @@
                 background: user._id === details?._id ? '#ff6f00' : 'none'
               }"></div>
             <div class="userList" style="flex-grow: 1" [ngClass]="{ selected: user._id === details?._id }">
-              <div style="d-flex">
+              <div class="d-flex hover">
                 <input type="checkbox" value="false" [attr.id]="'checkbox' + usrIndex" class="mr-3"
                   style="margin-top: 5px" (change)="clickCheckbox($event, user)" />
                 <span class="name"> {{ user.basicDetails?.name }}</span>
-                <span class="time float-right"> {{ formatLastLogin(user.lastLogin) }}</span>
+                <span class="time text-muted font-11 float-right"> {{ formatLastLogin(user.lastLogin) }}</span>
               </div>
-              <span class="email">{{ user.username }}</span>
+              <span class="email text-secondary font-12">{{ user.username }}</span>
             </div>
           </div>
         </div>
         <div class="col-9 users" style="padding: 24px">
           <div class="details">
             <span class="name">{{ details?.basicDetails?.name }}</span>
-            <span class="email">{{ details?.username }}</span>
-            <span class="time mr-auto" ngbTooltip="Last login">{{
-              formatLastLogin(details?.lastLogin, true)
-              }}</span>
+            <div class=" d-flex font-12 text-secondary mb-2">
+              <span class="dsi dsi-mail font-14 align-self-center-2 mr-2"></span>
+              <span>{{ details?.username }}</span>
+            </div>
+            <div class="d-flex mr-auto font-12 text-secondary">
+              <span class="dsi dsi-clock font-14 align-self-center mr-2"></span>
+              <span ngbTooltip="Last login" placement="right">{{
+                formatLastLogin(details?.lastLogin, true)
+                }}</span>
+            </div>
+
           </div>
           <odp-user-manage [toggleUserMng]="showUsrManage" [bredcrumbSub]="bredcrumbSubject" (toggleUserMngChange)="
               showUsrManage = $event; breadcrumbPaths.pop()
@@ -93,7 +101,7 @@
               <div *ngIf="currentTab === 'Attributes'" class="d-flex">
                 <label style="color: #6c7584; font-weight: 400">All attributes in which the user has been added</label>
                 <div class="add-attribute hover d-flex" (click)="showAttributeSide()" id="showAttributeSide"
-                  *ngIf="hasPermission('PMUBU')">
+                  *ngIf="hasPermission('PMUBU') && currentTab === 'Attributes' && isAttrPresent(details)">
                   <i class="dsi dsi-plus-circle font-20 icon-primary mr-2"></i>
                   <label class="fw-500 font-normal heading">Add Attribute</label>
                 </div>
@@ -102,9 +110,9 @@
                 <label style="color: #6c7584; font-weight: 400">All groups in which the user has been added
                 </label>
                 <div class="add-attribute hover d-flex" (click)="openGroupModal()" id="openModal"
-                  *ngIf="hasPermission('PMUBU')">
+                  *ngIf="hasPermission('PMUBU') && currentTab === 'Groups' && userGroups.length > 0">
                   <i class="dsi dsi-plus-circle font-20 mr-2 icon-primary"></i>
-                  <label class="fw-500 font-normal heading ">Add to Groups</label>
+                  <label class="fw-500 font-normal heading ">Assign to Groups</label>
                 </div>
               </div>
               <div *ngIf="!showLazyLoader && userGroups.length > 0 && currentTab==='Groups'" class="mt-4">
@@ -197,7 +205,7 @@
                   The user is not assigned to any groups</label>
                 <button type="button" class="btn btn-primary add-button mx-auto" id="addToGroup"
                   (click)="openGroupModal()" *ngIf="hasPermission('PMUBU')">
-                  Assign to group
+                  Assign to groups
                 </button>
               </div>
             </div>
@@ -255,8 +263,8 @@
             </label>
             <div class="input-wrapper position-relative">
               <input class="form-control" [type]="showPassword['new'] ? 'text' : 'password'" placeholder="Password"
-                formControlName="password" [ngClass]="{ 'is-invalid': pwdError }" autocomplete="new-password"
-                odpAutoFocus />
+                formControlName="password" [ngClass]="{ 'is-invalid': pwdError, 'pr-4': pwdError }"
+                autocomplete="new-password" odpAutoFocus />
               <span id="showPass" class="dsi eye-icon position-absolute hover" [ngClass]="{
                   'dsi-view': !showPassword['new'],
                   'dsi-hide': showPassword['new']
@@ -278,7 +286,8 @@
             </label>
             <div class="input-wrapper position-relative">
               <input id="cPassword" class="form-control" [type]="showPassword['confirm'] ? 'text' : 'password'"
-                placeholder="Confirm Password" formControlName="cpassword" [ngClass]="{ 'is-invalid': cPwdError }" />
+                placeholder="Confirm Password" formControlName="cpassword"
+                [ngClass]="{ 'is-invalid': cPwdError, 'pr-4': cPwdError  }" />
               <span class="dsi eye-icon position-absolute hover" [ngClass]="{
                   'dsi-view': !showPassword['confirm'],
                   'dsi-hide': showPassword['confirm']
@@ -338,7 +347,7 @@
                 <div class="position-relative">
                   <input id="username" class="form-control" type="text" placeholder="Enter Username"
                     formControlName="username" odpAutoFocus (blur)="checkForDuplicate()" [ngClass]="{
-                    'is-invalid': invalidUsername || invalidUsernamePattern
+                    'is-invalid pr-4': invalidUsername || invalidUsernamePattern
                   }" />
                   <span class="dsi dsi-danger-circle text-danger error-icon position-absolute" *ngIf="invalidUsername"
                     ngbTooltip="This is a required field"></span>
@@ -353,7 +362,7 @@
                 </label>
                 <div class="w-100 position-relative" formGroupName="basicDetails">
                   <input id="name" class="form-control pr-4" type="text" placeholder="Enter Name" formControlName="name"
-                    [ngClass]="{ 'is-invalid': invalidName }" autocomplete="autocomplete_off_hack" />
+                    [ngClass]="{ 'is-invalid pr-4': invalidName }" autocomplete="autocomplete_off_hack" />
                   <span class="dsi dsi-danger-circle text-danger error-icon position-absolute" *ngIf="invalidName"
                     ngbTooltip="This is a required field"></span>
                   <span *ngIf="
@@ -377,7 +386,7 @@
                   <div class="position-relative">
                     <input class="form-control" [type]="showPassword['new'] ? 'text' : 'password'"
                       placeholder="Password" formControlName="password" [ngClass]="{
-                        'is-invalid':
+                        'is-invalid pr-4':
                           invalidPassword ||
                           invalidPasswordLength ||
                           invalidPasswordPattern
@@ -403,7 +412,7 @@
                   <div class="position-relative">
                     <input id="cPassword" class="form-control" [type]="showPassword['confirm'] ? 'text' : 'password'"
                       placeholder="Confirm Password" formControlName="cpassword" [ngClass]="{
-                        'is-invalid': invalidCPassword || invalidPasswordMatch
+                        'is-invalid pr-4': invalidCPassword || invalidPasswordMatch
                       }" />
                     <span class="dsi eye-icon position-absolute hover" [ngClass]="{
                         'dsi-view': !showPassword['confirm'],
