--- a/src/app/home/local-bot/manage-bot-group/manage-bot-group.component.html
+++ b/src/app/home/local-bot/manage-bot-group/manage-bot-group.component.html
@@ -11,7 +11,7 @@
 
 <div class="d-flex mb-4">
     <div>
-        <odp-search-box (enteredText)="searchTerm=$event" (reset)="searchTerm=null">
+        <odp-search-box (enteredText)="searchTerm=$event" (reset)="searchTerm=null" [open]="true">
         </odp-search-box>
     </div>
     <div class="d-flex ml-auto mr-2">
