--- a/src/app/home/faas/faas-listing/faas-listing.component.html
+++ b/src/app/home/faas/faas-listing/faas-listing.component.html
@@ -31,7 +31,7 @@
           <div class="item-status">Status</div>
           <div class="item-last-invoked">Last Invoked</div>
         </div>
-        <div class="d-flex w-100 justify-content-end position-relative">
+        <div class="d-flex w-100 justify-content-end">
           <div class="item-actions"></div>
         </div>
       </div>
@@ -57,8 +57,8 @@
             <span *ngIf="!item.lastInvoked" class="text-muted">-</span>
           </div>
         </div>
-        <div class="d-flex w-100 justify-content-end position-relative">
-          <div class="item-actions h-10">
+        <div class="d-flex w-100 justify-content-end">
+          <div class="item-actions bg-white px-3 py-2 border-left">
             <div class="actions d-flex justify-content-end hover align-items-center">
               <ng-container *ngIf="item.status != 'Pending' && item.status != 'Maintainance' ">
                 <span *ngIf="canDeployFunction(item)" id='deploy_{{i}}' class="dsi dsi-skip-forward text-primary mr-2"
