--- a/src/app/home/schema-utils/wizards/wizards.component.scss
+++ b/src/app/home/schema-utils/wizards/wizards.component.scss
@@ -1,462 +1,105 @@
 @import "src/assets/scss/bootstrap/_functions.scss";
 @import "src/assets/scss/bootstrap/_variables.scss";
-.builder-body {
-  
-  height: calc(100vh - 201px);
-  &.schema-creator {
-    padding-bottom: 76px !important;
-  }
-  &.scroll {
-    overflow-y: auto;
-  }
-  &.edit {
-    height: calc(100vh - 267px);
-  }
-  .table-col-width-1 {
-    width: 100px;
-  }
-  .table-col-width-2 {
-    width: 100px;
-  }
-  table {
-    tr {
-      th,
-      td {
-        vertical-align: top;
-      }
-    }
-  }
-  .entity_desc {
-    max-width: 200px;
-  }
-}
 
-.circle {
-  min-width: 28px;
-  min-height: 28px;
-  line-height: 26px;
-  border-radius: 18px;
-  font-size: 12px;
-}
-
-.text {
-  font-size: 14px;
-  width: 175px;
-}
-
-
-.steps-count {
-  min-height: 60px;
-  max-height: 60px;
-}
-
-.step-fields,
-.fields {
-  .field {
-    width: 100%;
-    .name {
-      width: 150px;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
-    }
-    .symbol {
-      font-size: 22px;
-      line-height: 0;
-      vertical-align: middle;
-      margin-right: 10px;
-    }
-  }
-}
-
-.custom-text-overflow {
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-}
-
-.custom-text-overflow:hover {
-  text-overflow: unset;
-  width: 220px;
-  white-space: unset;
-}
-
-.field-error-symbol {
-  left: 90%;
-}
-
-.field-wrapper {
-  min-height: 35px;
-  max-height: 52px;
-  border-left: 5px solid transparent;
-  &.active {
-    border-left-color: $dark;
-  }
-  .icon {
-    min-width: 14px;
-    max-width: 14px;
-    min-height: 14px;
-    max-height: 14px;
-  }
-  .field {
-    min-width: 160px;
-    max-width: 160px;
-    min-height: 28px;
-    max-height: 28px;
-  }
-  .error-icon {
-    right: 5px;
-    top: 9px;
-  }
-  .searching-relation {
-    right: 4px;
-    top: 7px;
-  }
-  .type-icon-holder {
-    min-width: 28px;
-    max-width: 28px;
-    min-height: 22px;
-    max-height: 22px;
-    font-size: 16px;
-  }
-  div.tab {
-    width: 115px !important;
-    border-bottom: 4px solid transparent;
-    text-align: center;
-    &:hover {
-      border-bottom: 4px solid $accent;
-    }
-  }
-  .field-Count {
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-    color: $white;
-    top: 0;
-    left: 80%;
-    font-size: 0.7rem;
-  }
-  .bg-accent {
-    background-color: $accent !important;
-  }
-  .hook-detail {
-    flex: 0 0 30%;
-  }
-  .hook-action {
-    flex: 0 0 20%;
-  }
-  &:not(:last-child) {
-    border-bottom: 1px solid $border-color;
-  }
-  .field-options {
-    .readonly {
-      min-width: 18px;
-      max-width: 18px;
-      min-height: 18px;
-      max-height: 18px;
-      color: $border;
-      font-size: 10px;
-      opacity: 0;
-      transition: 0.25s;
-      &.active {
-        opacity: 1;
-        background: #000;
-        color: #fff;
-      }
-    }
-  }
-  &:hover {
-    .field-options {
-      .readonly {
-        opacity: 1;
-      }
-    }
-  }
-}
-
-.empty-div {
-  min-height: 36px;
-  max-height: 36px;
-  margin-top: -12px;
-}
-
-.add-attribute {
-  min-height: 36px;
-  max-height: 36px;
-  margin-left: 65px;
-}
-
-.collapse-field {
-  width: 10px;
-  height: 30px;
-  line-height: 28px;
-}
-
-.list-add-button {
-  position: absolute;
-  margin-top: -30px;
-  margin-left: 224px;
-  border: 0;
-  outline: 0;
-  box-shadow: none !important;
-  &:focus,
-  &:active {
-    outline: 0;
-    box-shadow: none !important;
-  }
-  &:hover {
-    background: none;
-    border: 0;
-  }
-}
-
-.manage {
-  margin-left: 17rem !important;
-  margin-top: 0rem !important;
-  .fa {
-    transition: 0.25s;
-  }
-  .fa-minus-circle {
-    &:hover {
-      color: $danger;
-    }
-  }
-  .fa-plus-circle {
-    &:hover {
-      color: $success;
-    }
-  }
-}
-
-.delete-align {
-  margin-left: 13px;
-  margin-top: 4px;
-}
-
-.delete-align-text {
-  margin-left: 12px;
-}
-
-.properties {
-  width: 400px;
-  border-radius: 15px;
-  position: absolute;
-  margin-left: 430px;
-  table {
-    td,
-    th {
-      vertical-align: top;
-      font-size: 14px;
-      &:first-child {
-        width: 100px;
-      }
-    }
-  }
-}
-
-.dropdown {
-  height: 36px;
-  padding: 0;
-  text-align: center;
-  outline: 0;
-  box-shadow: none !important;
-  width: 60px;
-  font-size: 22px;
-  .dropdown-toggle {
-    &:hover {
-      cursor: pointer;
-    }
-    &::after {
-      font-size: 16px;
-      float: right;
-      margin-top: 5px;
-      margin-right: 10px;
-      margin-left: 5px;
-    }
-  }
-  .dropdown-menu {
-    min-width: auto;
-    width: 152px;
-    border: 0;
-    background: #fff;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.16);
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    overflow: hidden;
-  }
-  .dropdown-item {
-    clear: initial;
-    width: 30px;
-    height: 30px;
-    font-size: 16px;
-    background: #fff;
-    line-height: 32px;
-    color: $dark;
-    &:hover {
-      cursor: pointer;
-      color: $light;
-    }
-  }
-}
-
-.selectedAttr {
-  background: $light;
-  color: $red;
-  outline: none;
-}
-
-.all-steps-dropdown {
-  width: 230px;
-  max-height: 40vh;
-  overflow: auto;
-  position: absolute;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.16);
-  display: none;
-  z-index: 2;
-  outline: 0;
-  top: 15px;
-  right: 15px;
-  .list-group-item {
-    &:not(.active):hover {
-      cursor: pointer;
-      background: $light;
-    }
-    border: none;
-  }
-}
-
-.right {
-  right: 55px;
-}
-
-.w-40 {
-  width: 40%;
-}
-
-.heading1 {
-  font-size: 16px;
-  font-weight: bold;
-}
-
-.fixed-width-line {
-  min-width: 19px;
-  max-width: 19px;
-}
-
-.steps-wrapper {
-  min-width: calc(100% - 113px);
-  max-width: calc(100% - 113px);
-  overflow-x: hidden;
-}
-
-.error-icon {
-  top: 10px;
-  left: 95%;
-}
-
-.ellipsis-span {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.action {
-  min-height: 60px;
-  max-height: 60px;
-}
-
-.action-type {
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
-  margin-top: 2px;
-}
-
-.active-tab {
-  color: $accent !important;
-  border-bottom: 4px solid $accent !important;
-}
-
-.action {
-  &-icon {
-    flex: 0 0 5%;
-  }
-  &-label {
-    flex: 0 0 35%;
-  }
-  &-item {
-    flex: 0 0 25%;
-  }
-  &-settings {
-    flex: 0 0 10%;
-    text-align: end;
-  }
-}
-
-// Custom Scroll bar
-/* width */
-
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-/* Track */
-
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 5px;
-}
-
-/* Handle */
-
-::-webkit-scrollbar-thumb {
-  background: $body-color;
-  border-radius: 5px;
-}
-
-.steps-div {
-  min-height: 60vh;
+.wizard-wrapper {
+  min-height: calc(100vh - 242px);
+  max-height: calc(100vh - 242px);
   overflow-y: auto;
-  overflow-x: hidden;
-  .action-header {
-    min-height: 60px;
-    max-height: 60px;
+
+  .steps-container {
+
+    .step-block {
+      min-width: 140px;
+      max-width: 140px;
+      min-height: 44px;
+      max-height: 44px;
+    }
   }
-  .steps-content {
-    overflow-y: auto;
+
+  .tabs-wrapper {
+    .tab {
+      border-bottom: 2px solid transparent;
+      text-align: center;
+
+      &.active-tab {
+        border-bottom: 2px solid $primary  !important;
+      }
+
+      &:hover {
+        color: $dark  !important;
+      }
+    }
   }
+
+  .wizard-content {
+    .attributes {
+      min-height: calc(100vh - 464px);
+      max-height: calc(100vh - 464px);
+      overflow-y: auto;
+
+      .attribute-item {
+        min-height: 40px;
+        max-height: 40px;
+
+        .attribute-action {
+          min-width: 16px;
+          max-width: 16px;
+        }
+
+        .attribute-name {
+          min-width: 116px;
+          max-width: 116px;
+        }
+      }
+
+    }
+  }
+
 }
 
-.empty-steps-div {
-  min-height: calc(100vh - 205px);
-}
-.content-steps-div {
-  max-height: 30vh ;
-  height: 30vh !important;
-  min-height: auto;
+
+.overlay {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background: rgba($color: #000000, $alpha: 0.6);
+  top: 0;
+  left: 0;
+  z-index: 0;
 }
 
-#action-content{
-  max-height: 50vh ;
-  height: 50vh !important;
-  min-height: auto;
-}
+.new-wizard-window {
+  height: 100vh;
+  width: 360px;
+  top: 0;
+  right: -360px;
+  z-index: 2;
+  transition: 0.2s;
+  overflow: auto;
+  padding-top: 40px !important;
 
-.ml-4r {
-  margin-left: 4rem !important;
-}
+  &.show {
+    right: 0px !important;
+  }
 
-.mr-6r {
-  margin-right: 6rem !important;
-}
+  .form-group {
+    .position-relative {
+      &:hover {
+        .delete-icon {
+          right: 10px;
+        }
+      }
 
-.form-radio-button.yellow::after {
-  background-color: #ffc107;
-}
-.form-radio-button.yellow {
-  border: 2px solid #ffc107;
-}
+      .error-symbol {
+        right: 28px;
+        top: 9px;
+      }
 
-.schema-free-message{
-  min-height: 55vh;
+      .delete-icon {
+        right: -60px;
+        top: 9px;
+        transition: 0.2s;
+      }
+    }
+  }
 }
