--- a/src/app/home/service-manager/service-manager.component.html
+++ b/src/app/home/service-manager/service-manager.component.html
@@ -75,7 +75,7 @@
               </div>
             </div>
             <div class="d-flex align-items-center justify-content-end w-100">
-              <div class="item-actions">
+              <div class="item-actions bg-white p-3 border-left">
                 <div class="actions d-flex justify-content-end hover align-items-center">
                   <ng-container *ngIf="srvc.status != 'Pending' && srvc.status != 'Maintainance' ">
                     <span *ngIf="isDeploy(i)" id='deploy_{{i}}' class="dsi dsi-skip-forward text-primary mr-2"
